--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authorization and QR Code Generator</title>
+    <title>Code Verification and QR Generator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,60 +13,82 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            background-color: #f5f5f5;
         }
-        form {
-            margin-bottom: 20px;
+        .container {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .code-input {
+            font-size: 24px;
+            width: 120px;
+            text-align: center;
+            letter-spacing: 4px;
+            padding: 8px;
+            margin: 20px 0;
+            border: 2px solid #ddd;
+            border-radius: 4px;
+        }
+        .submit-button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .submit-button:hover {
+            background-color: #0056b3;
         }
         #qrcode {
             margin-top: 20px;
-            width: 200px;
-            height: 200px;
+        }
+        .error-message {
+            color: #dc3545;
+            margin-top: 10px;
+            display: none;
         }
     </style>
 </head>
 <body>
-<h1>Login</h1>
-<form id="loginForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-    <button type="submit">Login</button>
-</form>
-
-<div id="qrcode"></div>
+<div class="container">
+    <h1>Enter Verification Code</h1>
+    <form id="codeForm">
+        <input type="text"
+               id="codeInput"
+               class="code-input"
+               maxlength="4"
+               pattern="[0-9A-Za-z]{4}"
+               required
+               autocomplete="off"
+               placeholder="CODE">
+        <div>
+            <button type="submit" class="submit-button">Verify</button>
+        </div>
+    </form>
+    <p id="errorMessage" class="error-message">Invalid code. Please try again.</p>
+    <div id="qrcode"></div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
 <script>
-    const backendUrl = 'https://some_backend/login';
-    const tokenKey = 'authToken';
-    const timeKey = 'authTime';
-    const activeUserKey = 'activeUser';
+    const backendUrl = 'https://some_backend/verify';
     const qrCodeContainer = document.getElementById('qrcode');
+    const errorMessage = document.getElementById('errorMessage');
+    const codeForm = document.getElementById('codeForm');
+    const BIN_KEY = 'storedBin';
+    const TIME_KEY = 'binStorageTime';
+    let qrCode;
 
-    function checkToken() {
-        const token = localStorage.getItem(tokenKey);
-        const storedTime = localStorage.getItem(timeKey);
-        const activeUser = localStorage.getItem(activeUserKey);
-        if (token && storedTime) {
-            const elapsedHours = (Date.now() - parseInt(storedTime, 10)) / (1000 * 60 * 60);
-            if (elapsedHours > 12) {
-                localStorage.clear();
-                location.reload();
-            } else {
-                loginForm.style.display = 'none';
-                generateQRCode(token, activeUser);
-            }
-        }
-    }
-
-    function generateQRCode(token, activeUser) {
-        let qrCode;
-
+    function generateQRCode(bin) {
         function updateQR() {
             const currentTime = Date.now();
-            const concatenatedString = `${token}_${currentTime}_${activeUser}`;
+            const concatenatedString = `${bin}_${currentTime}`;
             const encodedString = btoa(concatenatedString);
 
             if (!qrCode) {
@@ -85,53 +107,65 @@
         updateQR();
     }
 
-    document.getElementById('loginForm').addEventListener('submit', async (event) => {
-        event.preventDefault();
+    function storeBin(bin) {
+        localStorage.setItem(BIN_KEY, bin);
+        localStorage.setItem(TIME_KEY, Date.now().toString());
+    }
 
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
+    function checkStoredBin() {
+        const storedBin = localStorage.getItem(BIN_KEY);
+        const storedTime = localStorage.getItem(TIME_KEY);
+
+        if (storedBin && storedTime) {
+            const elapsedHours = (Date.now() - parseInt(storedTime, 10)) / (1000 * 60 * 60);
+
+            if (elapsedHours <= 10) {
+                codeForm.style.display = 'none';
+                generateQRCode(storedBin);
+                return true;
+            } else {
+                localStorage.removeItem(BIN_KEY);
+                localStorage.removeItem(TIME_KEY);
+            }
+        }
+        return false;
+    }
+
+    document.getElementById('codeForm').addEventListener('submit', async (event) => {
+        event.preventDefault();
+        errorMessage.style.display = 'none';
+
+        const code = document.getElementById('codeInput').value.toUpperCase();
 
         try {
-            //TODO: Implement the backend API call
-            // const response = await fetch(backendUrl, {
-            //     method: 'POST',
-            //     headers: { 'Content-Type': 'application/json' },
-            //     body: JSON.stringify({ username, password })
-            // });
-            //
-            // const result = await response.json();
+            const response = await fetch(backendUrl, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ code })
+            });
 
-            // TODO: remove
-            result = { status: true };
+            const result = await response.json();
 
-            if (result.status) {
-                localStorage.setItem(activeUserKey, username);
-                localStorage.setItem(tokenKey, generateToken(16));
-                localStorage.setItem(timeKey, Date.now());
-                location.reload();
+            if (result.bin) {
+                storeBin(result.bin);
+                codeForm.style.display = 'none';
+                generateQRCode(result.bin);
             } else {
-                alert('Authorization failed. Please check your credentials.');
+                errorMessage.style.display = 'block';
             }
         } catch (error) {
-            console.error('Error during login:', error);
-            alert('An error occurred. Please try again later.');
+            console.error('Error during verification:', error);
+            errorMessage.style.display = 'block';
         }
     });
 
-    function generateToken(length) {
-        let result = '';
-        const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-        const charactersLength = characters.length;
-        let counter = 0;
-        while (counter < length) {
-            result += characters.charAt(Math.floor(Math.random() * charactersLength));
-            counter += 1;
-        }
-        return result;
-    }
+    // Format input as user types
+    document.getElementById('codeInput').addEventListener('input', (e) => {
+        e.target.value = e.target.value.replace(/[^0-9A-Za-z]/g, '').toUpperCase();
+    });
 
-    checkToken();
+    // Check for stored bin on page load
+    checkStoredBin();
 </script>
 </body>
 </html>
-
