--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Verification and QR Generator</title>
+    <title>Favorit QR</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,6 +21,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
+            min-width: 250px;
         }
         .code-input {
             font-size: 24px;
@@ -56,7 +57,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Enter Verification Code</h1>
+    <h1 id="card_title">Введите пин-код</h1>
     <form id="codeForm">
         <input type="text"
                id="codeInput"
@@ -65,12 +66,12 @@
                pattern="[0-9A-Za-z]{4}"
                required
                autocomplete="off"
-               placeholder="CODE">
+               placeholder="1234">
         <div>
-            <button type="submit" class="submit-button">Verify</button>
+            <button type="submit" class="submit-button">Проверить</button>
         </div>
     </form>
-    <p id="errorMessage" class="error-message">Invalid code. Please try again.</p>
+    <p id="errorMessage" class="error-message">Неправильный код, попробуйте снова</p>
     <div id="qrcode"></div>
 </div>
 
@@ -122,6 +123,7 @@
             if (elapsedHours <= 10) {
                 codeForm.style.display = 'none';
                 generateQRCode(storedBin);
+                changeCardTitle();
                 return true;
             } else {
                 localStorage.removeItem(BIN_KEY);
@@ -129,6 +131,11 @@
             }
         }
         return false;
+    }
+
+    function changeCardTitle() {
+        const cardTitle = document.getElementById('card_title');
+        cardTitle.innerHTML = "Регистрация кодын сканерлеңіз" + "<br>" + "Сканируйте код регистрации";
     }
 
     document.getElementById('codeForm').addEventListener('submit', async (event) => {
@@ -154,6 +161,7 @@
                 storeBin(result.webID);
                 codeForm.style.display = 'none';
                 generateQRCode(result.webID);
+                changeCardTitle();
             }
         } catch (error) {
             console.error('Error during verification:', error);
