--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorit QR</title>
     <style>
+        #logo {
+            width: 200px;
+        }
+
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -23,6 +27,13 @@
             text-align: center;
             min-width: 250px;
         }
+
+        .logo_container {
+            display: flex;
+            justify-items: center;
+            margin-bottom: 20px;
+        }
+
         .code-input {
             font-size: 24px;
             width: 120px;
@@ -56,6 +67,10 @@
     </style>
 </head>
 <body>
+
+<div class="logo_container">
+    <img id="logo" src="img/helios_logo.png" alt="helios_logo">
+</div>
 <div class="container">
     <h1 id="card_title">Введите пин-код</h1>
     <form id="codeForm">
