--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
             console.log("before json", response)
             const result = await response.json();
 
+            console.log("baba", result)
+
             // TODO: for tests
             // result.webID = "48a389d9-b732-4def-8ca8-b7cc6c4105a2"
             // storeBin(result.webID);
