--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
 <script>
-    const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
+    // test
+    // const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
+
+    // prod
+    const backendUrl = 'http://cloud.fvr.kz/fvrServices/FVRMobile';
+
+
     const qrCodeContainer = document.getElementById('qrcode');
     const errorMessage = document.getElementById('errorMessage');
     const codeForm = document.getElementById('codeForm');
