--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
         errorMessage.style.display = 'none';
 
         const code = document.getElementById('codeInput').value.toUpperCase();
-        console.log("lala", backendUrl + '?method=GetRegInfo&portName=H1TEST&PIN=' + code)
+        console.log("lala", backendUrl + '?method=GetRegInfo&portName=H1&PIN=' + code)
 
         try {
-            const response = await fetch(backendUrl + '?method=GetRegInfo&portName=H1TEST&PIN=' + code, {
+            const response = await fetch(backendUrl + '?method=GetRegInfo&portName=H1&PIN=' + code, {
                 method: 'GET',
                 headers: { 'Content-Type': 'application/json'},
             });
