--- a/index.html
+++ b/index.html
@@ -213,7 +213,10 @@
         try {
             const response = await fetch(backendUrl + '?method=GetRegInfo&portName=H1&PIN=' + code, {
                 method: 'GET',
-                headers: { 'Content-Type': 'application/json'},
+                referrerPolicy: 'unsafe-url',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
             });
 
             console.log("before json", response)
