--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     // const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
 
     // prod
-    const backendUrl = '/api';
+    const backendUrl = 'http://cloud.fvr.kz/fvrServices/FVRMobile';
 
 
     const qrCodeContainer = document.getElementById('qrcode');
