--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 display: none;
             }
         }
+        #close_button{
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
     </style>
 </head>
 <body>
@@ -118,6 +123,9 @@
     </form>
     <p id="errorMessage" class="error-message">Неправильный код, попробуйте снова</p>
     <div id="qrcode"></div>
+    <div id="close_button" style="display: none">
+        <button onclick="clearBin()">Выйти</button>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
@@ -134,7 +142,6 @@
     const errorMessage = document.getElementById('errorMessage');
     const codeForm = document.getElementById('codeForm');
     const BIN_KEY = 'storedBin';
-    const TIME_KEY = 'binStorageTime';
     let qrCode;
 
     function calculateQRSize() {
@@ -205,26 +212,25 @@
 
     function storeBin(bin) {
         localStorage.setItem(BIN_KEY, bin);
-        localStorage.setItem(TIME_KEY, Date.now().toString());
+    }
+
+    function clearBin() {
+        localStorage.removeItem(BIN_KEY);
+        location.reload();
     }
 
     function checkStoredBin() {
         const storedBin = localStorage.getItem(BIN_KEY);
-        const storedTime = localStorage.getItem(TIME_KEY);
 
-        if (storedBin && storedTime) {
-            const elapsedHours = (Date.now() - parseInt(storedTime, 10)) / (1000 * 60 * 60);
-
-            if (elapsedHours <= 10) {
-                codeForm.style.display = 'none';
-                generateQRCode(storedBin);
-                changeCardTitle();
-                return true;
-            } else {
-                localStorage.removeItem(BIN_KEY);
-                localStorage.removeItem(TIME_KEY);
-            }
+        if (storedBin) {
+            codeForm.style.display = 'none';
+            generateQRCode(storedBin);
+            changeCardTitle();
+            showClearButton();
+            return true;
         }
+
+
         return false;
     }
 
@@ -233,17 +239,23 @@
         cardTitle.innerHTML = "Регистрация кодын сканерлеңіз" + "<br>" + "Сканируйте код регистрации";
     }
 
+    function showClearButton() {
+        document.getElementById("close_button").style.display = 'flex';
+    }
+
     document.getElementById('codeForm').addEventListener('submit', async (event) => {
         event.preventDefault();
         errorMessage.style.display = 'none';
 
         const code = document.getElementById('codeInput').value.toUpperCase();
 
-        const region = document.getElementById('region').value;
+        let region = document.getElementById('region').value;
         if (!region) {
             errorMessage.style.display = 'block';
             errorMessage.innerHTML = "Выберите регион";
             return;
+        } else if (backendUrl === "http://test.fvr.kz/fvrServices/FVRMobile") {
+            region = 'H1TEST'
         }
 
         const uri = backendUrl + '?method=GetRegInfo&portName=' + region + '&PIN=' + code
@@ -276,6 +288,7 @@
                 codeForm.style.display = 'none';
                 generateQRCode(result.webID);
                 changeCardTitle();
+                showClearButton();
             } else if (result.ReturnStatuses[0].StatusCode === '2') {
                 errorMessage.style.display = 'block';
                 errorMessage.innerHTML = "Неправильный код, попробуйте снова";
