--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <button type="submit" class="submit-button">Проверить</button>
         </div>
     </form>
-    <p id="errorMessage" class="error-message">Неправильный код, попробуйте снова</p>
+    <p id="errorMessage" class="error-message">Ошибка подключения к серверам Favorit</p>
     <div id="qrcode"></div>
     <div id="close_button" style="display: none">
         <button onclick="clearBin()">Выйти</button>
@@ -131,9 +131,52 @@
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
 <script>
+    // const getOptionsUrl = "http://cloud.fvr.kz/getSegments/visible"
+    //
+    //
+    // document.addEventListener('DOMContentLoaded', async () => {
+    //     const regionSelect = document.getElementById('region');
+    //
+    //     try {
+    //         const response = await fetch(getOptionsUrl, {
+    //             method: 'GET',
+    //             headers: {
+    //                 'Content-Type': 'application/json',
+    //             }
+    //         });
+    //
+    //         console.log('get regions response:', response)
+    //         if (!response.ok) {
+    //             throw new Error('Ошибка получения списка регионов');
+    //         }
+    //         const options = await response.json();
+    //
+    //         console.log()
+    //
+    //         // Clear existing options except the first "Выберите регион" option
+    //         while (regionSelect.options.length > 1) {
+    //             regionSelect.remove(1);
+    //         }
+    //
+    //         // Populate select with fetched options
+    //         options.forEach(option => {
+    //             const newOption = document.createElement('option');
+    //             newOption.value = option.segment;
+    //             newOption.textContent = option.name_ru;
+    //             regionSelect.appendChild(newOption);
+    //         });
+    //     } catch (error) {
+    //         console.error('Error fetching region options:', error);
+    //         alert("Ошибка получения списка регионов");
+    //         // reload
+    //         location.reload();
+    //     }
+    // });
+
+
+
     // test
     // const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
-
     // prod
     const backendUrl = '/fvrServices/FVRMobile';
 
@@ -272,7 +315,7 @@
             console.log("before json", response)
             const result = await response.json();
 
-            console.log("baba", result)
+            console.log("decoded response:", result)
 
             // TODO: for tests
             // result.webID = "48a389d9-b732-4def-8ca8-b7cc6c4105a2"
@@ -298,7 +341,7 @@
                 errorMessage.innerHTML = "Ошибка подключения к серверам Favorit";
             }
         } catch (error) {
-            console.error('Error during verification:', error);
+            console.error('Ошибка подключения к серверам Favorit:', error);
             errorMessage.style.display = 'block';
         }
     });
