--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <div>
             <select id="region" class="select" required>
                 <option value="">Выберите регион</option>
-<!--                <option value="H1">ВКО, Семей, Акмолинская</option>-->
-<!--                <option value="H2">Сады, колледжи, доп.образование</option>-->
-<!--                <option value="H3">Туркестан</option>-->
-<!--                <option value="H5">Жетысу</option>-->
-<!--                <option value="TG">Павлодар</option>-->
+                <option value="H1">ВКО, Семей, Акмолинская</option>
+                <option value="H2">Сады, колледжи, доп.образование</option>
+                <option value="H3">Туркестан</option>
+                <option value="H5">Жетысу</option>
+                <option value="TG">Павлодар</option>
             </select>
         </div>
 
@@ -231,7 +231,8 @@
             return true;
         }
 
-        fetchOptions()
+        // TODO: uncomment
+        // fetchOptions()
 
         return false;
     }
