--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
 <script>
-    const getOptionsUrl = "http://cloud.fvr.kz/getSegments/visible"
+    const getOptionsUrl = "/getSegments/visible"
 
     // test
     // const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
