--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
         } catch (error) {
             console.error('Ошибка подключения к серверам Favorit:', error);
             errorMessage.style.display = 'block';
+            errorMessage.innerHTML = "Ошибка подключения к серверам Favorit";
         }
     });
 
