--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
 <script>
+
+    //test
+    // const getOptionsUrl = "/getSegments/invisible"
+    // prod
     const getOptionsUrl = "/getSegments/visible"
 
     // test
