--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <div>
             <select id="region" class="select" required>
                 <option value="">Выберите регион</option>
-<!--                <option value="H1">ВКО, Семей, Акмолинская</option>-->
-<!--                <option value="H2">Сады, колледжи, доп.образование</option>-->
-<!--                <option value="H3">Туркестан</option>-->
-<!--                <option value="H5">Жетысу</option>-->
-<!--                <option value="TG">Павлодар</option>-->
+                <!--                <option value="H1">ВКО, Семей, Акмолинская</option>-->
+                <!--                <option value="H2">Сады, колледжи, доп.образование</option>-->
+                <!--                <option value="H3">Туркестан</option>-->
+                <!--                <option value="H5">Жетысу</option>-->
+                <!--                <option value="TG">Павлодар</option>-->
             </select>
         </div>
 
@@ -146,7 +146,7 @@
     const qrCodeContainer = document.getElementById('qrcode');
     const errorMessage = document.getElementById('errorMessage');
     const codeForm = document.getElementById('codeForm');
-    const BIN_KEY = 'storedBin';
+    const TIME_DATA_KEY = 'storedTimeData';
     let qrCode;
 
     function calculateQRSize() {
@@ -172,13 +172,17 @@
         }
     }
 
-    function generateQRCode(bin) {
+    function generateQRCode(timeData) {
         document.getElementById('logo').style.display = 'none';
         const qrSize = calculateQRSize();
 
         function updateQR() {
-            const currentTime = Date.now();
-            const concatenatedString = `${bin}_${currentTime}`;
+            // Calculate server-adjusted time
+            const currentBrowserTime = Date.now();
+            const timeDifference = timeData.timeDiff;
+            const serverAdjustedTime = currentBrowserTime + timeDifference;
+
+            const concatenatedString = `${timeData.webID}_${serverAdjustedTime}`;
             const encodedString = btoa(concatenatedString);
 
             if (!qrCode) {
@@ -215,21 +219,22 @@
         updateQR();
     }
 
-    function storeBin(bin) {
-        localStorage.setItem(BIN_KEY, bin);
+    function storeTimeData(data) {
+        localStorage.setItem(TIME_DATA_KEY, JSON.stringify(data));
     }
 
     function clearBin() {
-        localStorage.removeItem(BIN_KEY);
+        localStorage.removeItem(TIME_DATA_KEY);
         location.reload();
     }
 
-    function checkStoredBin() {
-        const storedBin = localStorage.getItem(BIN_KEY);
+    function checkStoredTimeData() {
+        const storedData = localStorage.getItem(TIME_DATA_KEY);
 
-        if (storedBin) {
+        if (storedData) {
+            const timeData = JSON.parse(storedData);
             codeForm.style.display = 'none';
-            generateQRCode(storedBin);
+            generateQRCode(timeData);
             changeCardTitle();
             showClearButton();
             return true;
@@ -248,6 +253,29 @@
 
     function showClearButton() {
         document.getElementById("close_button").style.display = 'flex';
+    }
+
+    async function fetchServerTime() {
+        try {
+            const response = await fetch('/api/time', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            });
+
+            if (!response.ok) {
+                throw new Error('Failed to fetch server time');
+            }
+
+            const timeData = await response.json();
+            // Convert $msec to milliseconds (it comes as seconds with microseconds)
+            const serverTimeMs = Math.floor(parseFloat(timeData.timestamp) * 1000);
+            return serverTimeMs;
+        } catch (error) {
+            console.error('Error fetching server time:', error);
+            throw error;
+        }
     }
 
     document.getElementById('codeForm').addEventListener('submit', async (event) => {
@@ -291,11 +319,29 @@
 
 
             if (result.ReturnStatuses[0].StatusCode === '0') {
-                storeBin(result.webID);
-                codeForm.style.display = 'none';
-                generateQRCode(result.webID);
-                changeCardTitle();
-                showClearButton();
+                // Fetch server time after successful webID retrieval
+                try {
+                    const serverTime = await fetchServerTime();
+                    const browserTime = Date.now();
+                    const timeDiff = serverTime - browserTime;
+
+                    const timeData = {
+                        webID: result.webID,
+                        serverTime: serverTime,
+                        browserTime: browserTime,
+                        timeDiff: timeDiff
+                    };
+
+                    storeTimeData(timeData);
+                    codeForm.style.display = 'none';
+                    generateQRCode(timeData);
+                    changeCardTitle();
+                    showClearButton();
+                } catch (timeError) {
+                    console.error('Failed to fetch server time:', timeError);
+                    errorMessage.style.display = 'block';
+                    errorMessage.innerHTML = "Ошибка получения времени сервера";
+                }
             } else if (result.ReturnStatuses[0].StatusCode === '2') {
                 errorMessage.style.display = 'block';
                 errorMessage.innerHTML = "Неправильный код, попробуйте снова";
@@ -359,8 +405,8 @@
         e.target.value = e.target.value.replace(/[^0-9A-Za-z]/g, '').toUpperCase();
     });
 
-    // Check for stored bin on page load
-    checkStoredBin();
+    // Check for stored time data on page load
+    checkStoredTimeData();
 
     // Add event listener for window resize
     window.addEventListener('resize', resizeQRCode);
