--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 <script>
 
     //test
-    // const getOptionsUrl = "/getSegments/invisible"
+    const getOptionsUrl = "/getSegments/invisible"
     // prod
-    const getOptionsUrl = "/getSegments/visible"
+    // const getOptionsUrl = "/getSegments/visible"
 
     // test
-    // const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
+    const backendUrl = 'http://test.fvr.kz/fvrServices/FVRMobile';
     // prod
-    const backendUrl = '/fvrServices/FVRMobile';
+    // const backendUrl = '/fvrServices/FVRMobile';
 
 
     const qrCodeContainer = document.getElementById('qrcode');
