--- a/index.html
+++ b/index.html
@@ -259,6 +259,43 @@
         document.getElementById("close_button").style.display = 'flex';
     }
 
+    function parseServerTime(timeString) {
+        // Parse time string like "15/May/2025:16:26:11 +0500"
+        const months = {
+            'Jan': 0, 'Feb': 1, 'Mar': 2, 'Apr': 3, 'May': 4, 'Jun': 5,
+            'Jul': 6, 'Aug': 7, 'Sep': 8, 'Oct': 9, 'Nov': 10, 'Dec': 11
+        };
+
+        // Split the time string
+        const parts = timeString.match(/(\d+)\/(\w+)\/(\d+):(\d+):(\d+):(\d+)\s+([+-]\d{4})/);
+
+        if (!parts) {
+            throw new Error('Invalid time format');
+        }
+
+        const day = parseInt(parts[1]);
+        const month = months[parts[2]];
+        const year = parseInt(parts[3]);
+        const hour = parseInt(parts[4]);
+        const minute = parseInt(parts[5]);
+        const second = parseInt(parts[6]);
+        const timezone = parts[7];
+
+        // Parse timezone offset
+        const tzSign = timezone[0] === '+' ? 1 : -1;
+        const tzHours = parseInt(timezone.substring(1, 3));
+        const tzMinutes = parseInt(timezone.substring(3, 5));
+        const tzOffsetMs = tzSign * (tzHours * 3600000 + tzMinutes * 60000);
+
+        // Create date in UTC
+        const date = new Date(Date.UTC(year, month, day, hour, minute, second));
+
+        // Adjust for timezone to get the actual UTC timestamp
+        const utcTimestamp = date.getTime() - tzOffsetMs;
+
+        return utcTimestamp;
+    }
+
     async function fetchServerTime() {
         try {
             const response = await fetch('/api/time', {
@@ -273,8 +310,13 @@
             }
 
             const timeData = await response.json();
-            // Convert $msec to milliseconds (it comes as seconds with microseconds)
-            const serverTimeMs = Math.floor(parseFloat(timeData.timestamp) * 1000);
+
+            // Parse the time string instead of using timestamp
+            const serverTimeMs = parseServerTime(timeData.time);
+
+            console.log('Parsed server time:', serverTimeMs);
+            console.log('Original time string:', timeData.time);
+
             return serverTimeMs;
         } catch (error) {
             console.error('Error fetching server time:', error);
